Added Swagger and Mock Integration Tests

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -208,75 +208,21 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your JBossEWS (Apache/Tomcat) application on OpenShift</h1>
+            <h1>Welcome to Shop Application</h1>
           </hgroup>
 
 
         <div class="row">
           <section class='col-xs-12 col-sm-6 col-md-6'>
             <section>
-              <h2>Deploying code changes</h2>
-                <p>OpenShift uses the <a href="http://git-scm.com/">Git version control system</a> for your source code, and grants you access to it via the Secure Shell (SSH) protocol. In order to upload and download code to your application you need to give us your <a href="https://developers.openshift.com/en/managing-remote-connection.html">public SSH key</a>. You can upload it within the web console or install the <a href="https://developers.openshift.com/en/managing-client-tools.html">RHC command line tool</a> and run <code>rhc setup</code> to generate and upload your key automatically.</p>
+              <h2>Rest Helper</h2>
+                <p>For swagger 2 demo <a href="/swagger-ui.html">Click Here!</a></p>
 
-                <h3>Working in your local Git repository</h3>
-                <p>If you created your application from the command line and uploaded your SSH key, rhc will automatically download a copy of that source code repository (Git calls this 'cloning') to your local system.</p>
-
-                <p>If you created the application from the web console, you'll need to manually clone the repository to your local system. Copy the application's source code Git URL and then run:</p>
-
-<pre>$ git clone &lt;git_url&gt; &lt;directory_to_create&gt;
-
-# Within your project directory
-# Commit your changes and push to OpenShift
-
-$ git commit -a -m 'Some commit message'
-$ git push</pre>
-
-
-                  <ul>
-                    <li><a href="https://developers.openshift.com/en/managing-modifying-applications.html">Learn more about deploying and building your application</a></li>
-                    <li>See the README file in your local application Git repository for more information on the options for deploying applications.</li>
-                  </ul>
 
             </section>
 
           </section>
-          <section class="col-xs-12 col-sm-6 col-md-6">
 
-                <h2>Managing your application</h2>
-
-                <h3>Web Console</h3>
-                <p>You can use the OpenShift web console to enable additional capabilities via cartridges, add collaborator access authorizations, designate custom domain aliases, and manage domain memberships.</p>
-
-                <h3>Command Line Tools</h3>
-                <p>Installing the <a href="https://developers.openshift.com/en/managing-client-tools.html">OpenShift RHC client tools</a> allows you complete control of your cloud environment. Read more on how to manage your application from the command line in our <a href="https://www.openshift.com/user-guide">User Guide</a>.
-                </p>
-
-                <h2>Development Resources</h2>
-                  <h3>JBoss Developer Studio</h3>
-                  <p>
-                    The JBoss Developer Studio is a full featured IDE with OpenShift integration built in.
-                    It gives you the ability to create, edit and deploy applications without having to
-                    leave the IDE.  Links to download, install and use the JBoss Developer Studio for Linux,
-                    Mac OS X, or Windows can be found on the
-                    <a href="https://www.openshift.com/developers/tools">JBoss Developer Studio tools page.</a>
-                  </p>
-                  <h3>Debugging</h3>
-                  <p><a href="snoop.jsp">View debugging information</a> about the server environment including memory pools.</p>
-                  <ul>
-                    <li><a href="https://developers.openshift.com/en/tomcat-overview.html">Getting Started with Tomcat on OpenShift</a></li>
-                    <li><a href="https://developers.openshift.com">Developer Center</a></li>
-                    <li><a href="https://www.openshift.com/user-guide">User Guide</a></li>
-                    <li><a href="https://help.openshift.com">Help Center</a></li>
-                    <li><a href="http://stackoverflow.com/questions/tagged/openshift">Stack Overflow questions for OpenShift</a></li>
-                    <li><a href="http://git-scm.com/documentation">Git documentation</a></li>
-                  </ul>
-
-          </section>
-        </div>
-
-        <footer>
-          <div class="logo"><a href="https://www.openshift.com/"></a></div>
-        </footer>
 </section>
 </body>
 </html>
