--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Shop</title>
-  <base href="/spa">
+  <title>Angular Webapp</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="styles.f8439ee8c835bc89f4de.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.9910be8eafe9eabeeeaa.bundle.js"></script><script type="text/javascript" src="main.1d7e6c37e8ccf7dc436c.bundle.js"></script></body>
+<script type="text/javascript" src="inline.9f8808b95209732a7c23.bundle.js"></script><script type="text/javascript" src="vendor.e3467076122a1ba0591e.bundle.js"></script><script type="text/javascript" src="main.2b5c536457324ced2095.bundle.js"></script></body>
 </html>
