Added Login Module and added few goodies

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Angular Webapp</title>
-  <base href="/">
+  <base href="/#">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="styles.f8439ee8c835bc89f4de.bundle.css" rel="stylesheet"></head>
+<link href="styles.3ce9c90221ee1c1945f0.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.9f8808b95209732a7c23.bundle.js"></script><script type="text/javascript" src="vendor.e3467076122a1ba0591e.bundle.js"></script><script type="text/javascript" src="main.2b5c536457324ced2095.bundle.js"></script></body>
+<script type="text/javascript" src="inline.b3b890b7d82c3d5ff5c9.bundle.js"></script><script type="text/javascript" src="vendor.90e34e57a7d986f6a22b.bundle.js"></script><script type="text/javascript" src="main.c10f10cd3ee3ba30154e.bundle.js"></script></body>
 </html>
