--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angular Webapp</title>
+  <title>Shop API Demo</title>
   <base href="/#">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="styles.3ce9c90221ee1c1945f0.bundle.css" rel="stylesheet"></head>
+<link href="styles.1b36be53cc13300d5a01.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.15c7353b95098744c650.bundle.js"></script><script type="text/javascript" src="vendor.90e34e57a7d986f6a22b.bundle.js"></script><script type="text/javascript" src="main.f6914f69135b9fc3351e.bundle.js"></script></body>
+<script type="text/javascript" src="inline.3c47d8fb30193fd23f87.bundle.js"></script><script type="text/javascript" src="vendor.84863ab0a147a84542e0.bundle.js"></script><script type="text/javascript" src="main.e334aac8e91b7ddd41cc.bundle.js"></script></body>
 </html>
