--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Shop API Demo</title>
-  <base href="/#">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,5 +11,5 @@
 <link href="styles.7654d1a06522ed6bbee7.bundle.css" rel="stylesheet"></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.c3e7d9bc9afcfac458f9.bundle.js"></script><script type="text/javascript" src="vendor.30eda9326ab1ccb97d11.bundle.js"></script><script type="text/javascript" src="main.92c39a4f3c6ac51472d7.bundle.js"></script></body>
+<script type="text/javascript" src="inline.66fd3328c1ef560eca94.bundle.js"></script><script type="text/javascript" src="vendor.6d6bd0404e3e75aacacc.bundle.js"></script><script type="text/javascript" src="main.fdbaa46f1c8f6f2088b9.bundle.js"></script></body>
 </html>
