Clanup of the code and update UI

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="styles.7654d1a06522ed6bbee7.bundle.css" rel="stylesheet"></head>
+<link href="styles.5c46527731b55dc0ed38.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.c01e8f03464403c9e127.bundle.js"></script><script type="text/javascript" src="vendor.6d6bd0404e3e75aacacc.bundle.js"></script><script type="text/javascript" src="main.ce62f29e5bc1898d958f.bundle.js"></script></body>
+<script type="text/javascript" src="inline.0a16d4175028b27073c1.bundle.js"></script><script type="text/javascript" src="vendor.eb76dc992203e910fae3.bundle.js"></script><script type="text/javascript" src="main.c687210e7d1b368192ea.bundle.js"></script></body>
 </html>
